--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ p{
 .thirdsec{
     padding-left: 5%;
     padding-top: 4%;
-    display: flex;
+    
 }
 .thirdsec-f{
     width: 45%;
@@ -88,15 +88,15 @@ p{
     margin: 0 0 10px 0;
 
 }
-.thirdsec-s p{
+.thirdsec-s {
     padding-bottom:20px ;
 }
 
 
 .fourthSec{
-    padding-left: 5%;
+    padding-left: 10%;
     padding-top: 4%;
-    display: flex;
+    
 }
 .fourthSec-f{
     width: 45%;
@@ -132,6 +132,22 @@ p{
     background-size: 100% 50%;
     margin-bottom: -850px;
 }
-
-
-
+footer{
+    
+    background-color: rgb(10,15,25);
+    height: 200px;
+    text-align: center;
+}
+footer h2{
+    padding-top: 50px;
+    font-family: 'Merriweather', serif;
+    color: white;
+    margin: 0;
+}
+footer h2 span{
+    font-size:30px ;
+    color:rgb(250 ,90 ,90) ;
+}
+footer p{
+    color: white;
+}
