--- a/style.css
+++ b/style.css
@@ -126,16 +126,11 @@ p{
     width: 100%;
 }
 
-.work-banner{
-    background-image: url("images/shapes/latest-work-bg.png");
-    background-repeat: no-repeat;
-    background-size: 100% 50%;
-    margin-bottom: -850px;
-}
+
 footer{
-    
+    margin-top: 10%;
     background-color: rgb(10,15,25);
-    height: 200px;
+    height: 125px;
     text-align: center;
 }
 footer h2{
